Fix project item alignment

--- a/src/header/header.css
+++ b/src/header/header.css
@@ -40,7 +40,7 @@ header{
 @media (max-width: 768px) {
 
   header{
-    width: 85%;
+    width: 90%;
   }
   .burger {
     display: block;
